--- a/decision-app/views/vacancies/index.pug
+++ b/decision-app/views/vacancies/index.pug
@@ -14,7 +14,7 @@ block content
               th Título
               th Cliente
               th Nível Profissional
-              th Motivo
+              //- th Motivo
               th Data de Solicitação
               th Candidatos
               th Ações
@@ -23,10 +23,39 @@ block content
               td= vacancy.title
               td= vacancy.client
               td= vacancy.professional_level
-              td= vacancy.reason
-              td= vacancy.requested_date.toLocaleDateString()
+              //- td= vacancy.reason
+              td= vacancy.requested_date.toLocaleDateString("pt-BR")
               td= vacancy.applicants
               td
                 a.btn.btn-primary.btn-sm(href=`/vacancies/${vacancy.id}`) Ver Detalhes
 
+        nav(aria-label="Page navigation")
+          ul.pagination.justify-content-center
+            if(pagination.page == 1)
+              li.page-item 
+                a.page-link.disabled(href="#") Anterior
+              li.page-item 
+                a.page-link.disabled(href="/vacancies?pg=1") 1
+              if(pagination.getTotalPages() > 1)
+                li.page-item
+                  a.page-link(href="/vacancies?pg=2") 2
+              if(pagination.getTotalPages() > 2)
+                li.page-item
+                  a.page-link(href="/vacancies?pg=3") 3
+            else 
+              li.page-item 
+                a.page-link(href=`/vacancies?pg=${pagination.page-1}`) Anterior
+              li.page-item 
+                a.page-link(href=`/vacancies?pg=${pagination.page -1}`)= pagination.page -1
+              if(pagination.getTotalPages() > 1)
+                li.page-item
+                  a.page-link.disabled(href=`/vacancies?pg=${pagination.page}`)= pagination.page
+              if(pagination.page < pagination.getTotalPages())
+                li.page-item
+                  a.page-link(href=`/vacancies?pg=${pagination.page+1}`)= pagination.page+1
+            li.page-item 
+              if(pagination.page < pagination.getTotalPages())
+                a.page-link(href=`/vacancies?pg=${pagination.page +1}`) Próxima
+              else
+                a.page-link.disabled(href=`#`) Próxima
         
