--- a/decision-app/views/vacancies/vacancy.pug
+++ b/decision-app/views/vacancies/vacancy.pug
@@ -4,18 +4,30 @@ block content
   .row.mt-4
     h1= vacancy.title
   .row.mt-4
-    .col-md-3
-      .h2= vacancy.client
-      p.badge.text-bg-warning.me-2= vacancy.only_pwd?'PCD':'Não PCD'
-      p.badge.text-bg-success.me-2=vacancy.professional_level
-      p.badge.text-bg-secondary.me-2=vacancy.purchase_value_2
-      br
-      for a in vacancy.areas_of_expertise.split(",")
-        p.badge.text-bg-primary.me-2= a
-      p 
-        | Criado em: 
-        i.bi.bi-calendar-week.me-2
-        =vacancy.requested_date.toLocaleDateString()
+    .col-md-4
+      table
+        tr 
+          td.text-end 
+            b Cliente:
+          td= vacancy.client
+        tr
+          td.text-end 
+            b Data de Criação:
+          td
+            i.bi.bi-calendar-week.me-2
+            = vacancy.requested_date.toLocaleDateString("pt-BR")
+        tr
+          td.text-end 
+            b Áreas de Expertise:
+          td
+            for a in vacancy.areas_of_expertise.split(",")
+              span.badge.text-bg-primary.me-2= a
+        tr
+          td.text-end 
+            b PCD:
+          td
+            span.badge.text-bg-warning.me-2= vacancy.only_pwd?'PCD':'Não PCD'
+
     .col-md-6
       h3 Descrição
       p
@@ -67,7 +79,7 @@ block content
 
   .row.mt-4
     .col
-      if bestApplicants.length > 0
+      if bestApplicants && bestApplicants.length > 0
         table.table.table-hover.table-sm
           thead 
             tr
