--- a/decision-app/views/applicants/applicant.pug
+++ b/decision-app/views/applicants/applicant.pug
@@ -11,7 +11,7 @@ block content
       table
         tr 
           td.text-end
-            b Área de atua atuação:
+            b Área de atuatuação:
           td= applicant.area_of_expertise
         tr
           td.text-end
@@ -34,6 +34,10 @@ block content
           td
             i.bi.bi-calendar-week.me-2.ms-2
             =applicant.updated_at?applicant.updated_at.toLocaleDateString():''
+        tr
+          td.text-end
+            b Localização:
+          td=applicant.location
       
     .col-md-6
       h3 Curriculum
